project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 8000
